Add header content and images

--- a/index.html
+++ b/index.html
@@ -10,6 +10,35 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <header class="grid">
+    <div class="unit s-1-3 m-1-3 island-1-2">
+      <img src="images/logo-small.png" alt="logo">
+    </div>
+    <div class="unit s-2-3 m-2-3">
+      <nav>
+        <ul>
+          <a href="#">Home</a>
+          <a href="#">Tour</a>
+          <a href="#">Pricing</a>
+          <a href="#">Sign-Up</a>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <body>
+    <section class="relative push-0">
+      <img class="img-flex" src="images/homepage-banner@2x.png" alt="hero banner">
+      <div class="absolute pin-c text-center">
+        <h1>RE-DISCOVER</h1>
+        <p>Subscribe for 20th Century Tunes Tailored to your tastes</p>
+        <a href="#">JOIN NOW</a>
+      </div>
 
+    </section>
+
+  </body>
+  <footer>
+
+  </footer>
 </body>
 </html>
