Add footer content

--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
       </div>
     </section>
   </body>
-  <footer class="grid">
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4">
-      <img src="" alt="">
+  <footer class="grid island-2">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
+      <img src="images/facebook.svg" alt="facebook logo">
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4">
-      <img src="" alt="">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
+      <img src="images/twitter.svg" alt="twitter logo">
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4">
-      <img src="" alt="">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
+      <img src="images/instagram.svg" alt="instagram logo">
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
       <img src="" alt="">
     </div>
   </footer>
