Add all remaining pages and base content
Also removes redundant images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="grid grid-middle push-0 island">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
-      <img class="img-flex" src="images/logo-small.png" alt="logo">
+      <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
     </div>
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav>
@@ -27,7 +27,7 @@
       </nav>
     </div>
   </header>
-  <body>
+  <main>
     <section class="banner relative push-0">
       <img class="img-flex mobile-banner" src="images/homepage-banner-mobile.png" alt="hero banner">
       <img class="img-flex desktop-banner" src="images/homepage-banner-desktop.png" alt="hero banner">
@@ -71,11 +71,11 @@
         <div class="absolute pin-c text-center">
           <h2>Subscribe</h2>
           <p>Find out how RecordBox’s subscription service can brighten your days with the best new tracks from the good old days!</p>
-          <a class="orange-btn island-1-4 gutter-1-2 href="#">LISTEN NOW</a>
+          <a class="orange-btn island-1-4 gutter-1-2" href="#">LISTEN NOW</a>
         </div>
       </div>
     </section>
-  </body>
+  </main>
   <footer class="grid island-2">
     <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
       <img src="images/facebook.svg" alt="facebook logo">
