--- a/tour.html
+++ b/tour.html
@@ -31,16 +31,16 @@
 
   </main>
   <footer class="grid island-2">
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
       <img src="images/facebook.svg" alt="facebook logo">
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
       <img src="images/twitter.svg" alt="twitter logo">
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
       <img src="images/instagram.svg" alt="instagram logo">
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
       <img src="" alt="">
     </div>
   </footer>
