--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>RecordBox</title>
+  <title>RecordBox Homepage</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -19,10 +19,10 @@
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav>
         <ul class="push-0 text-center">
-          <a class="island-1-4 push-0"href="#">Home</a>
-          <a class="island-1-4 push-0" href="#">Tour</a>
-          <a class="island-1-4 push-0" href="#">Pricing</a>
-          <a class="island-1-4 push-0" href="#">Sign-Up</a>
+          <li><a class="island-1-4 push-0"href="#">Home</a></li>
+          <li><a class="island-1-4 push-0" href="#">Tour</a></li>
+          <li><a class="island-1-4 push-0" href="#">Pricing</a></li>
+          <li><a class="island-1-4 push-0" href="#">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
