--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </div>
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav>
-        <ul class="push-0 text-center">
-          <li><a class="island-1-4 push-0"href="#">Home</a></li>
-          <li><a class="island-1-4 push-0" href="#">Tour</a></li>
-          <li><a class="island-1-4 push-0" href="#">Pricing</a></li>
-          <li><a class="island-1-4 push-0" href="#">Sign-Up</a></li>
+        <ul class="push-0 text-center list-group-inline ">
+          <li><a class="island-1-4 push-0"href="index.html">Home</a></li>
+          <li><a class="island-1-4 push-0" href="tour.html">Tour</a></li>
+          <li><a class="island-1-4 push-0" href="pricing.html">Pricing</a></li>
+          <li><a class="island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
@@ -78,6 +78,7 @@
   </main>
   <footer class="grid island">
     <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
+      /*icons*/
       <img src="images/facebook.svg" alt="facebook logo">
     </div>
     <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
