--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Righteous" rel="stylesheet">
-
 </head>
 <body>
-  <header class="grid grid-middle push-0 island">
+  <ul class="skip-links">
+    <li><a href="#nav"></a></li>
+    <li><a href="#main"></a></li>
+  </ul>
+
+  <header class="grid grid-middle push-0 island" role="banner">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
       <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
     </div>
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
-      <nav>
+      <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
-          <li><a class="island-1-4 push-0"href="index.html">Home</a></li>
+          <li><a class="island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
           <li><a class="island-1-4 push-0" href="tour.html">Tour</a></li>
           <li><a class="island-1-4 push-0" href="pricing.html">Pricing</a></li>
           <li><a class="island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
@@ -27,7 +31,7 @@
       </nav>
     </div>
   </header>
-  <main>
+  <main id="main" role="main">
     <section class="banner relative push-0">
       <img class="img-flex mobile-banner" src="images/homepage-banner-mobile.png" alt="hero banner">
       <img class="img-flex desktop-banner" src="images/homepage-banner-desktop.png" alt="hero banner">
@@ -42,19 +46,19 @@
         <img class="img-flex island-2" src="images/record.png" alt="album">
         <h2>Feature Album</h2>
         <p>Discover our weekly features, absolutely guaranteed to blow you away as soon as you hit play!</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2 href="#">LISTEN NOW</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="tour.html">LISTEN NOW</a>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 island text-center">
-        <img class="img-flex island-2"  src="images/article.png" alt="album">
+        <img class="img-flex island-2" src="images/article.png" alt="album">
         <h2>Feature Album</h2>
         <p>Browse through our selection of featured articles, assembled and authored by the RecordBox team</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2 href="#">READ UP</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="tour.html">READ UP</a>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 island text-center">
-        <img class="img-flex island-2"  src="images/microphone.png" alt="album">
+        <img class="img-flex island-2" src="images/microphone.png" alt="album">
         <h2>Feature Album</h2>
         <p>Who are we highlighting this April? Click below to find out which 20th Century Artist we want you to Re-Discover!</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2 href="#">WHO'S BACK</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="tour.html">WHO'S BACK</a>
       </div>
     </section>
     <section class="content-duo grid">
@@ -63,7 +67,7 @@
         <div class="absolute pin-c text-center">
           <h2>Explore</h2>
           <p>Give our expansive data base of 20th Century Tunes a gander. From big brass bands to disco delights, we’ve got it!</p>
-          <a class="orange-btn island-1-4 gutter-1-2 href="#">LISTEN NOW</a>
+          <a class="orange-btn btn island-1-4 gutter-1-2" href="tour.html">LISTEN NOW</a>
         </div>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 relative">
@@ -71,12 +75,15 @@
         <div class="absolute pin-c text-center">
           <h2>Subscribe</h2>
           <p>Find out how RecordBox’s subscription service can brighten your days with the best new tracks from the good old days!</p>
-          <a class="orange-btn island-1-4 gutter-1-2" href="#">LISTEN NOW</a>
+          <a class="orange-btn island-1-4 gutter-1-2" href="pricing.html">LISTEN NOW</a>
         </div>
       </div>
     </section>
   </main>
-  <footer class="grid island">
+  <footer class="grid island" role="contentinfo">
+    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
+      <img src="images/top-btn" alt="back to top">
+    </div>
     <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
       /*icons*/
       <img src="images/facebook.svg" alt="facebook logo">
@@ -86,9 +93,6 @@
     </div>
     <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
       <img src="images/instagram.svg" alt="instagram logo">
-    </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
-      <img src="" alt="">
     </div>
   </footer>
 </body>
