--- a/pricing.html
+++ b/pricing.html
@@ -2,46 +2,91 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>RecordBox Pricing</title>
+  <title>RecordBox Tour</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Righteous" rel="stylesheet">
-
 </head>
 <body>
-  <header class="grid grid-middle push-0 island">
+  <ul class="skip-links">
+    <li><a href="#nav" aria-label="skip to navigation"></a></li>
+    <li><a href="#main" aria-label="skip to main"></a></li>
+  </ul>
+
+  <header role="banner" class="grid grid-middle push-0 island">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
       <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
     </div>
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
-      <nav>
+      <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
-          <li><a class="island-1-4 push-0" href="index.html">Home</a></li>
-          <li><a class="island-1-4 push-0" href="tour.html">Tour</a></li>
-          <li><a class="island-1-4 push-0" href="pricing.html">Pricing</a></li>
+          <li><a class="island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
+          <li><a class="island-1-4 push-0" href="pricing.html">Tour</a></li>
+          <li><a class="island-1-4 push-0" href="tour.html">Pricing</a></li>
           <li><a class="island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
   </header>
-  <main>
+  <main id="main" role="main">
+    <section class=" banner relative push-0">
+      <img class="desktop-banner img-flex" src="images/explore-banner-desktop.png" alt="tour banner">
+      <img class="mobile-banner img-flex" src="images/explore-banner-mobile.png" alt="tour banner">
+      <div class="absolute pin-c gutter-2">
+        <h1 class="zetta">RE-DISCOVER</h1>
+      </div>
+    </section>
+    <section class="content grid island">
+      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
+        <div class="embed embed-1by1">
+          <img class="embed-item img-flex island-2" src="images/howlin-wolf.png" alt="image of howlin wolf">
+        </div>
+        <h2 class="tera">Feature Artist</h2>
+        <p><span class="bold">Howlin’ Wolf (1910-1976)</span> remains one of the Blues’ greatest icons, with a singularly powerful voice that rings clear into todays gold-standard RecordBox collection.</p>
+        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
+        <div class="embed embed-1by1">
+          <img class="embed-item img-flex island-2" src="images/tour-articles.png" alt="old newspapers">
+        </div>
+        <h2 class="tera">Feature Article</h2>
+        <p><span class="bold">Music Publication in the 1940s</span> Find out what role music critics and their publishers played in uplifting or quashing the music emerging in their eras. Long before the age of like and subscribe, these zines are an important and fascinating part of music’s history.</p>
+        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
+        <div class="embed embed-1by1">
+          <img class="embed-item img-flex island-2" src="images/bobbie-gentry.png" alt="image of bobbie gentry">
+        </div>
+        <h2 class="tera">Artist of the Month</h2>
+        <p><span class="bold">Bobbie Gentry</span> exemplifies the spirit of the American singer-songwriter. Upon its release in 1967, her hit single “Ode to Billie Joe” knocked the Beatles’ “All you Need is Love” out of the #1 Billboard spot. She is a true gem, and her sensual, southern-fried voice was all we needed to make her May’s Artist of the Month.</p>
+        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
+        <div class="embed embed-1by1">
+          <img class="embed-item img-flex island-2" src="images/tour-tributes.png" alt="image of rocking musician">
+        </div>
+        <h2 class="tera">Modern Tributes</h2>
+        <p><span class="bold">Chuck Alder</span> channels the very finest qualities of the ‘60s in his music. With strong, smooth Motown vibes downplayed into mellow synth-scapes, we highly recommend Alder to any and all who love the likes of Marvin Gaye and Chuck Berry. Ideally listened to on a long drive straight out of the city.</p>
+        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
+      </div>
+    </section>
 
   </main>
-  <footer class="grid island-2">
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
-      <img src="images/facebook.svg" alt="facebook logo">
+  <footer class="grid island" role="contentinfo">
+    <div class="unit xs-1 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
+      <i class="icon i-24 island push-1-2"><img src="images/top-btn.png" alt="back to top"></i>
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
-      <img src="images/twitter.svg" alt="twitter logo">
+    <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
+      <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
-      <img src="images/instagram.svg" alt="instagram logo">
+    <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
+      <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex gutter-2">
-      <img src="" alt="">
+    <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
+      <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
     </div>
   </footer>
 </body>
