--- a/sign-up.html
+++ b/sign-up.html
@@ -12,36 +12,41 @@
 
 </head>
 <body>
-  <header class="grid grid-middle push-0 island">
+  <ul class="skip-links">
+    <li><a href="#nav" aria-label="skip to navigation"></a></li>
+    <li><a href="#main" aria-label="skip to main"></a></li>
+  </ul>
+
+  <header role="banner" class="grid grid-middle push-0 island">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
       <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
     </div>
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
-      <nav>
+      <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
-          <li><a class="island-1-4 push-0" href="index.html">Home</a></li>
-          <li><a class="island-1-4 push-0" href="tour.html">Tour</a></li>
-          <li><a class="island-1-4 push-0" href="pricing.html">Pricing</a></li>
+          <li><a class="island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
+          <li><a class="island-1-4 push-0" href="pricing.html">Tour</a></li>
+          <li><a class="island-1-4 push-0" href="tour.html">Pricing</a></li>
           <li><a class="island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
   </header>
-  <main>
+  <main id="main" role="main">
 
   </main>
-  <footer class="grid island-2">
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
-      <img src="images/facebook.svg" alt="facebook logo">
+  <footer class="grid island" role="contentinfo">
+    <div class="unit xs-1 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
+      <i class="icon i-24 island push-1-2"><img src="images/top-btn.png" alt="back to top"></i>
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
-      <img src="images/twitter.svg" alt="twitter logo">
+    <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
+      <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
-      <img src="images/instagram.svg" alt="instagram logo">
+    <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
+      <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
     </div>
-    <div class="unit xs-1-4 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex island-2">
-      <img src="" alt="">
+    <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
+      <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
     </div>
   </footer>
 </body>
