Add content to pricing page

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <li><a href="#main" aria-label="skip to main"></a></li>
   </ul>
 
-  <header class="grid grid-middle push-0 island" role="banner">
+  <header class="grid grid-middle push-0 island" role="banner" id="top">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
       <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
     </div>
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
-          <li><a class="island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
+          <li><a class="current island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
           <li><a class="island-1-4 push-0" href="pricing.html">Tour</a></li>
           <li><a class="island-1-4 push-0" href="tour.html">Pricing</a></li>
           <li><a class="island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
@@ -38,7 +38,7 @@
       <div class="absolute pin-c text-center">
         <h1 class="zetta">RE-DISCOVER</h1>
         <p class="banner-p">Subscribe for 20th Century Tunes Tailored to your tastes</p>
-        <a class="orange-btn btn island-1-4 gutter-1-2" href="#">JOIN NOW</a>
+        <a class="orange-btn btn island-1-4 gutter-1-2" href="tour.html">JOIN NOW</a>
       </div>
     </section>
     <section class="content-trio grid island">
@@ -48,7 +48,7 @@
         </div>
         <h2 class="tera">Feature Album</h2>
         <p>Discover our weekly features, absolutely guaranteed to blow you away as soon as you hit play!</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2" href="tour.html">LISTEN NOW</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html">LISTEN NOW</a>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 island text-center">
         <div class="embed embed-1by1">
@@ -56,7 +56,7 @@
         </div>
         <h2 class="tera">Feature Album</h2>
         <p>Browse through our selection of featured articles, assembled and authored by the RecordBox team</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2" href="tour.html">READ UP</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html">READ UP</a>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 island text-center">
         <div class="embed embed-1by1">
@@ -64,7 +64,7 @@
         </div>
         <h2 class="tera">Feature Album</h2>
         <p>Who are we highlighting this April? Click below to find out which 20th Century Artist we want you to Re-Discover!</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2" href="tour.html">WHO'S BACK</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html">WHO'S BACK</a>
       </div>
     </section>
     <section class="content-duo grid">
@@ -73,7 +73,7 @@
         <div class="absolute pin-c text-center">
           <h2 class="tera">Explore</h2>
           <p>Give our expansive data base of 20th Century Tunes a gander. From big brass bands to disco delights, we’ve got it!</p>
-          <a class="orange-btn btn island-1-4 gutter-1-2" href="tour.html">LISTEN NOW</a>
+          <a class="orange-btn btn island-1-4 gutter-1-2" href="pricing.html">LISTEN NOW</a>
         </div>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 relative">
@@ -81,23 +81,31 @@
         <div class="absolute pin-c text-center">
           <h2 class="tera">Subscribe</h2>
           <p>Find out how RecordBox’s subscription service can brighten your days with the best new tracks from the good old days!</p>
-          <a class="orange-btn btn island-1-4 gutter-1-2" href="pricing.html">LISTEN NOW</a>
+          <a class="orange-btn btn island-1-4 gutter-1-2" href="tour.html">LISTEN NOW</a>
         </div>
       </div>
     </section>
   </main>
   <footer class="grid island" role="contentinfo">
     <div class="unit xs-1 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/top-btn.png" alt="back to top"></i>
+      <a href="#top">
+        <i class="icon i-24 island push"><img src="images/top-btn.png" alt="back to top"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
+      </a>
     </div>
   </footer>
 </body>
