--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
     <li><a href="#main" aria-label="skip to main"></a></li>
   </ul>
 
-  <header role="banner" class="grid grid-middle push-0 island">
+  <header role="banner" class="grid grid-middle push-0 island" id="top">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
       <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
     </div>
@@ -24,7 +24,7 @@
       <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
           <li><a class="island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
-          <li><a class="island-1-4 push-0" href="pricing.html">Tour</a></li>
+          <li><a class="current island-1-4 push-0" href="pricing.html">Tour</a></li>
           <li><a class="island-1-4 push-0" href="tour.html">Pricing</a></li>
           <li><a class="island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
         </ul>
@@ -39,16 +39,16 @@
         <h1 class="zetta">RE-DISCOVER</h1>
       </div>
     </section>
-    <section class="content grid island">
-      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
+    <section class="content grid grid-stretch island">
+      <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
         <div class="embed embed-1by1">
           <img class="embed-item img-flex island-2" src="images/howlin-wolf.png" alt="image of howlin wolf">
         </div>
         <h2 class="tera">Feature Artist</h2>
-        <p><span class="bold">Howlin’ Wolf (1910-1976)</span> remains one of the Blues’ greatest icons, with a singularly powerful voice that rings clear into todays gold-standard RecordBox collection.</p>
+        <p><span class="bold">Howlin’ Wolf (1910-1976)</span> remains one of the Blues’ greatest icons, with a singularly powerful voice that rings clear into todays gold-standard RecordBox collection. Wolf has cemented himself in history as a Chess Records icon and key player in the story of the blues.</p>
         <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
       </div>
-      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
+      <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
         <div class="embed embed-1by1">
           <img class="embed-item img-flex island-2" src="images/tour-articles.png" alt="old newspapers">
         </div>
@@ -56,7 +56,7 @@
         <p><span class="bold">Music Publication in the 1940s</span> Find out what role music critics and their publishers played in uplifting or quashing the music emerging in their eras. Long before the age of like and subscribe, these zines are an important and fascinating part of music’s history.</p>
         <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
       </div>
-      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
+      <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
         <div class="embed embed-1by1">
           <img class="embed-item img-flex island-2" src="images/bobbie-gentry.png" alt="image of bobbie gentry">
         </div>
@@ -64,7 +64,7 @@
         <p><span class="bold">Bobbie Gentry</span> exemplifies the spirit of the American singer-songwriter. Upon its release in 1967, her hit single “Ode to Billie Joe” knocked the Beatles’ “All you Need is Love” out of the #1 Billboard spot. She is a true gem, and her sensual, southern-fried voice was all we needed to make her May’s Artist of the Month.</p>
         <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
       </div>
-      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
+      <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
         <div class="embed embed-1by1">
           <img class="embed-item img-flex island-2" src="images/tour-tributes.png" alt="image of rocking musician">
         </div>
@@ -77,16 +77,24 @@
   </main>
   <footer class="grid island" role="contentinfo">
     <div class="unit xs-1 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/top-btn.png" alt="back to top"></i>
+      <a href="#top">
+        <i class="icon i-24 island push"><img src="images/top-btn.png" alt="back to top"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
+      </a>
     </div>
   </footer>
 </body>
