--- a/sign-up.html
+++ b/sign-up.html
@@ -17,7 +17,7 @@
     <li><a href="#main" aria-label="skip to main"></a></li>
   </ul>
 
-  <header role="banner" class="grid grid-middle push-0 island">
+  <header role="banner" class="grid grid-middle push-0 island" id="top">
     <div class="unit xs-1 s-1 m-1-3 island-1-2 push-1-2">
       <img class="img-flex" src="images/logo-small.png" alt="RecordBox logo">
     </div>
@@ -27,26 +27,35 @@
           <li><a class="island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
           <li><a class="island-1-4 push-0" href="pricing.html">Tour</a></li>
           <li><a class="island-1-4 push-0" href="tour.html">Pricing</a></li>
-          <li><a class="island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
+          <li><a class="current island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main id="main" role="main">
 
+
   </main>
   <footer class="grid island" role="contentinfo">
     <div class="unit xs-1 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/top-btn.png" alt="back to top"></i>
+      <a href="#top">
+        <i class="icon i-24 island push"><img src="images/top-btn.png" alt="back to top"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
+      </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
+      <a href="https://youtu.be/2Z4m4lnjxkY">
+        <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
+      </a>
     </div>
   </footer>
 </body>
