--- a/sign-up.html
+++ b/sign-up.html
@@ -24,36 +24,104 @@
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
-          <li><a class="island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
-          <li><a class="island-1-4 push-0" href="pricing.html">Tour</a></li>
-          <li><a class="island-1-4 push-0" href="tour.html">Pricing</a></li>
-          <li><a class="current island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
+          <li><a class="island-1-4 push-0" href="index.html" aria-label="home link">Home</a></li>
+          <li><a class="island-1-4 push-0" href="pricing.html" aria-label="tour link">Tour</a></li>
+          <li><a class="island-1-4 push-0" href="tour.html" aria-label="pricing link">Pricing</a></li>
+          <li><a class="current island-1-4 push-0" href="sign-up.html" aria-label="sign-up link">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main id="main" role="main">
+    <section class="push">
+      <div class="embed embed-3by2 push-0 relative">
+        <img class="embed-item push-0 img-flex" src="images/sign-up-banner.png" alt="banner background">
+        <div class="absolute pin-c">
+          <h1 class="txt-white peta">SIGN-UP</h1>
+        </div>
+      </div>
+    </section>
+    <section class="grid">
+      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
+        <h2 class="push-0 mega text-left gutter">SIGN-UP HERE</h2>
+        <form class="push-0 island" method="POST" action="https://formspree.io/">
+          <fieldset class="push-0 pad-t">
+            <legend class="hidden">Account type</legend>
+            <div class="push-0">
+              <div class="push">
+                <input type="radio" id="free-account" name="account-type">
+                <label for="free-account">Free Trial</label>
+              </div>
+              <div class="push">
+                <input type="radio" id="subscription" name="account-type">
+                <label for="subscription">Subscription</label>
+              </div>
+            </div>
+          </fieldset>
+          <fieldset>
+            <legend class="hidden">Information</legend>
+            <div class="push">
+              <label for="name">Name</label>
+              <input id="name" name="name" required>
+            </div>
+            <div class="push">
+              <label for="email">Email</label>
+              <input id="email" type="email" placeholder="example@email.com" aria-label="enter email here" name="email" required>
+            </div>
+            <div class="push">
+              <label for="username">Username</label>
+              <input id="username" name="username" required>
+            </div>
+            <div class="push">
+              <label for="password">Password</label>
+              <input type="password" id="password" name="password" required>
+            </div>
+          </fieldset>
+          <div class="push">
+            <button class="btn orange-blue-btn" type="submit">LET'S GO!</button>
+          </div>
+        </form>
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
+        <h2 class="push-0 mega text-left gutter">SIGN-IN</h2>
+        <form class="push-0 island" method="POST" action="https://formspree.io/">
+          <fieldset>
+            <legend class="hidden">Sign-information</legend>
+            <div class="push">
+              <label for="in-username">Username</label>
+              <input id="in-username" name="in-username" required>
+            </div>
+            <div class="push">
+              <label for="in-password">Password</label>
+              <input type="password" id="in-password" name="in-password" required>
+            </div>
+          </fieldset>
+        </form>
+        <div class="push gutter">
+          <a href="index.html" class="btn orange-blue-btn">SIGN IN</a>
+        </div>
 
-
+      </div>
+    </section>
   </main>
   <footer class="grid island" role="contentinfo">
     <div class="unit xs-1 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="#top">
+      <a href="#top" aria-label="click to return to top">
         <i class="icon i-24 island push"><img src="images/top-btn.png" alt="back to top"></i>
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY">
+      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="facebook link">
         <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY">
+      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="twitter link">
         <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY">
+      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="instagram link">
         <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
       </a>
     </div>
