--- a/tour.html
+++ b/tour.html
@@ -24,10 +24,10 @@
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
-          <li><a class="island-1-4 push-0" href="index.html" aria-label="">Home</a></li>
-          <li><a class="island-1-4 push-0" href="pricing.html">Tour</a></li>
-          <li><a class="current island-1-4 push-0" href="tour.html">Pricing</a></li>
-          <li><a class="island-1-4 push-0" href="sign-up.html">Sign-Up</a></li>
+          <li><a class="island-1-4 push-0" href="index.html" aria-label="home link">Home</a></li>
+          <li><a class="island-1-4 push-0" href="pricing.html" aria-label="tour link">Tour</a></li>
+          <li><a class="island-1-4 push-0" href="tour.html" aria-label="pricing link">Pricing</a></li>
+          <li><a class="current island-1-4 push-0" href="sign-up.html" aria-label="sign-up link">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
@@ -93,22 +93,22 @@
   </main>
   <footer class="grid island" role="contentinfo">
     <div class="unit xs-1 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="#top">
+      <a href="#top" aria-label="click to return to top">
         <i class="icon i-24 island push"><img src="images/top-btn.png" alt="back to top"></i>
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY">
+      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="facebook link">
         <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY">
+      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="twitter link">
         <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY">
+      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="instagram link">
         <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
       </a>
     </div>
