Correct radio button function
Now that the markbot is pleased.

--- a/sign-up.html
+++ b/sign-up.html
@@ -49,7 +49,7 @@
             <legend class="hidden">Account type</legend>
             <div class="push-0">
               <div class="push">
-                <input type="radio" id="free-account" name="free-account">
+                <input type="radio" id="free-account" name="account-type">
                 <label for="free-account">Free Trial</label>
               </div>
               <div class="push">
