Correct spacing and arrangement errors

--- a/sign-up.html
+++ b/sign-up.html
@@ -58,7 +58,7 @@
               </div>
             </div>
           </fieldset>
-          <fieldset>
+          <fieldset class="push-0 pad-t">
             <legend class="hidden">Information</legend>
             <div class="push">
               <label for="name">Name</label>
@@ -84,8 +84,8 @@
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
         <h2 class="push-0 mega text-left gutter">SIGN-IN</h2>
-        <form class="push-0 island" method="POST" action="https://formspree.io/">
-          <fieldset>
+        <form class="push-0 pad-t gutter" method="POST" action="https://formspree.io/">
+          <fieldset class="push-0 pad-t">
             <legend class="hidden">Sign-information</legend>
             <div class="push">
               <label for="in-username">Username</label>
