--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="unit xs-1 s-1 m-2-3 push-1-2">
       <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
-          <li><a class="island-1-4 push-0" href="index.html" aria-label="home link">Home</a></li>
+          <li><a class="current island-1-4 push-0" href="index.html" aria-label="home link">Home</a></li>
           <li><a class="island-1-4 push-0" href="pricing.html" aria-label="tour link">Tour</a></li>
           <li><a class="island-1-4 push-0" href="tour.html" aria-label="pricing link">Pricing</a></li>
-          <li><a class="current island-1-4 push-0" href="sign-up.html" aria-label="sign-up link">Sign-Up</a></li>
+          <li><a class="island-1-4 push-0" href="sign-up.html" aria-label="sign-up link">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
@@ -38,7 +38,7 @@
       <div class="absolute pin-c text-center">
         <h1 class="zetta">RE-DISCOVER</h1>
         <p class="banner-p">Subscribe for 20th Century Tunes Tailored to your tastes</p>
-        <a class="orange-btn btn island-1-4 gutter-1-2" href="tour.html">JOIN NOW</a>
+        <a class="orange-btn btn island-1-4 gutter-1-2" href="sign-up.html">JOIN NOW</a>
       </div>
     </section>
     <section class="content-trio grid island">
