--- a/pricing.html
+++ b/pricing.html
@@ -24,9 +24,9 @@
       <nav id="nav" role="navigation">
         <ul class="push-0 text-center list-group-inline ">
           <li><a class="island-1-4 push-0" href="index.html" aria-label="home link">Home</a></li>
-          <li><a class="island-1-4 push-0" href="pricing.html" aria-label="tour link">Tour</a></li>
+          <li><a class="current island-1-4 push-0" href="pricing.html" aria-label="tour link">Tour</a></li>
           <li><a class="island-1-4 push-0" href="tour.html" aria-label="pricing link">Pricing</a></li>
-          <li><a class="current island-1-4 push-0" href="sign-up.html" aria-label="sign-up link">Sign-Up</a></li>
+          <li><a class="island-1-4 push-0" href="sign-up.html" aria-label="sign-up link">Sign-Up</a></li>
         </ul>
       </nav>
     </div>
