Correct improperly entered content

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="embed embed-1by1">
           <img class="embed-item img-flex island-2" src="images/article.png" alt="album">
         </div>
-        <h2 class="tera">Feature Album</h2>
+        <h2 class="tera">Feature Article</h2>
         <p>Browse through our selection of featured articles, assembled and authored by the RecordBox team</p>
         <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html">READ UP</a>
       </div>
@@ -62,7 +62,7 @@
         <div class="embed embed-1by1">
           <img class="embed-item img-flex island-2" src="images/microphone.png" alt="album">
         </div>
-        <h2 class="tera">Feature Album</h2>
+        <h2 class="tera">Artist of the Month</h2>
         <p>Who are we highlighting this April? Click below to find out which 20th Century Artist we want you to Re-Discover!</p>
         <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html">WHO'S BACK</a>
       </div>
