Add aria-labels to all links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="absolute pin-c text-center">
         <h1 class="zetta">RE-DISCOVER</h1>
         <p class="banner-p">Subscribe for 20th Century Tunes Tailored to your tastes</p>
-        <a class="orange-btn btn island-1-4 gutter-1-2" href="sign-up.html">JOIN NOW</a>
+        <a class="orange-btn btn island-1-4 gutter-1-2" href="sign-up.html aria-label="sign-up link"">JOIN NOW</a>
       </div>
     </section>
     <section class="content-trio grid island">
@@ -48,7 +48,7 @@
         </div>
         <h2 class="tera">Feature Album</h2>
         <p>Discover our weekly features, absolutely guaranteed to blow you away as soon as you hit play!</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html">LISTEN NOW</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html" aria-label="pricing page link">LISTEN NOW</a>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 island text-center">
         <div class="embed embed-1by1">
@@ -56,7 +56,7 @@
         </div>
         <h2 class="tera">Feature Article</h2>
         <p>Browse through our selection of featured articles, assembled and authored by the RecordBox team</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html">READ UP</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html" aria-label="tour page link">READ UP</a>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 island text-center">
         <div class="embed embed-1by1">
@@ -64,7 +64,7 @@
         </div>
         <h2 class="tera">Artist of the Month</h2>
         <p>Who are we highlighting this April? Click below to find out which 20th Century Artist we want you to Re-Discover!</p>
-        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html">WHO'S BACK</a>
+        <a class="orange-blue-btn island-1-4 gutter-1-2" href="pricing.html" aria-label="tour page link">WHO'S BACK</a>
       </div>
     </section>
     <section class="content-duo grid">
@@ -73,7 +73,7 @@
         <div class="absolute pin-c text-center">
           <h2 class="tera">Explore</h2>
           <p>Give our expansive data base of 20th Century Tunes a gander. From big brass bands to disco delights, we’ve got it!</p>
-          <a class="orange-btn btn island-1-4 gutter-1-2" href="pricing.html">LISTEN NOW</a>
+          <a class="orange-btn btn island-1-4 gutter-1-2" href="pricing.html" aria-label="tour page link">LISTEN NOW</a>
         </div>
       </div>
       <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2 relative">
@@ -81,7 +81,7 @@
         <div class="absolute pin-c text-center">
           <h2 class="tera">Subscribe</h2>
           <p>Find out how RecordBox’s subscription service can brighten your days with the best new tracks from the good old days!</p>
-          <a class="orange-btn btn island-1-4 gutter-1-2" href="tour.html">LISTEN NOW</a>
+          <a class="orange-btn btn island-1-4 gutter-1-2" href="tour.html" aria-label="pricing page link">LISTEN NOW</a>
         </div>
       </div>
     </section>
