--- a/pricing.html
+++ b/pricing.html
@@ -46,7 +46,7 @@
         </div>
         <h2 class="tera">Feature Artist</h2>
         <p><span class="bold">Howlin’ Wolf (1910-1976)</span> remains one of the Blues’ greatest icons, with a singularly powerful voice that rings clear into todays gold-standard RecordBox collection. Wolf has cemented himself in history as a Chess Records icon and key player in the story of the blues.</p>
-        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
+        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#" aria-label="link opens app, but not really">OPEN IN APP</a>
       </div>
       <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
         <div class="embed embed-1by1">
@@ -54,7 +54,7 @@
         </div>
         <h2 class="tera">Feature Article</h2>
         <p><span class="bold">Music Publication in the 1940s</span> Find out what role music critics and their publishers played in uplifting or quashing the music emerging in their eras. Long before the age of like and subscribe, these zines are an important and fascinating part of music’s history.</p>
-        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
+        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#" aria-label="link opens app, but not really">OPEN IN APP</a>
       </div>
       <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
         <div class="embed embed-1by1">
@@ -62,7 +62,7 @@
         </div>
         <h2 class="tera">Artist of the Month</h2>
         <p><span class="bold">Bobbie Gentry</span> exemplifies the spirit of the American singer-songwriter. Upon its release in 1967, her hit single “Ode to Billie Joe” knocked the Beatles’ “All you Need is Love” out of the #1 Billboard spot. She is a true gem, and her sensual, southern-fried voice was all we needed to make her May’s Artist of the Month.</p>
-        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
+        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#" aria-label="link opens app, but not really">OPEN IN APP</a>
       </div>
       <div class="unit unit-content-distribute xs-1 s-1 m-1 l-1-2 xl-1-2 island text-center">
         <div class="embed embed-1by1">
@@ -70,7 +70,7 @@
         </div>
         <h2 class="tera">Modern Tributes</h2>
         <p><span class="bold">Chuck Alder</span> channels the very finest qualities of the ‘60s in his music. With strong, smooth Motown vibes downplayed into mellow synth-scapes, we highly recommend Alder to any and all who love the likes of Marvin Gaye and Chuck Berry. Ideally listened to on a long drive straight out of the city.</p>
-        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#">OPEN IN APP</a>
+        <a class="btn orange-blue-btn island-1-4 gutter-1-2" href="#" aria-label="link opens app, but not really">OPEN IN APP</a>
       </div>
     </section>
 
