--- a/sign-up.html
+++ b/sign-up.html
@@ -98,7 +98,7 @@
           </fieldset>
         </form>
         <div class="push gutter">
-          <a href="index.html" class="btn orange-blue-btn">SIGN IN</a>
+          <a href="index.html" class="btn orange-blue-btn" aria-label="sign-up link">SIGN IN</a>
         </div>
 
       </div>
