--- a/tour.html
+++ b/tour.html
@@ -88,7 +88,7 @@
       </table>
     </section>
     <div class="push-2 text-center">
-      <a class="orange-blue-btn btn island-1-4 gutter-1-2" href="sign-up.html">SIGN UP</a>
+      <a class="orange-blue-btn btn island-1-4 gutter-1-2" href="sign-up.html" aria-label="sign-up link">SIGN UP</a>
     </div>
   </main>
   <footer class="grid island" role="contentinfo">
