--- a/sign-up.html
+++ b/sign-up.html
@@ -111,17 +111,17 @@
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="facebook link">
+      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="trolololink">
         <i class="icon i-24 island push-1-2"><img src="images/facebook.svg" alt="facebook logo"></i>
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="twitter link">
+      <a href="https://youtu.be/bFEoMO0pc7k" aria-label="ain't nobody got time for links">
         <i class="icon i-24 island push-1-2"><img src="images/twitter.svg" alt="twitter logo"></i>
       </a>
     </div>
     <div class="unit xs-1-3 s-1-4 m-1-4 l-1-4 xl-1-4 img-flex text-center">
-      <a href="https://youtu.be/2Z4m4lnjxkY" aria-label="instagram link">
+      <a href="https://youtu.be/Ns7Z8ag4oSY" aria-label="adorablink">
         <i class="icon i-24 island push-1-2"><img src="images/instagram.svg" alt="instagram logo"></i>
       </a>
     </div>
