--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="absolute pin-c text-center">
         <h1 class="zetta">RE-DISCOVER</h1>
         <p class="banner-p">Subscribe for 20th Century Tunes Tailored to your tastes</p>
-        <a class="orange-btn btn island-1-4 gutter-1-2" href="sign-up.html aria-label="sign-up link"">JOIN NOW</a>
+        <a class="orange-btn btn island-1-4 gutter-1-2" href="sign-up.html" aria-label="sign-up link">JOIN NOW</a>
       </div>
     </section>
     <section class="content-trio grid island">
