Remove redundant word

--- a/sign-up.html
+++ b/sign-up.html
@@ -43,7 +43,7 @@
     </section>
     <section class="grid">
       <div class="unit xs-1 s-1 m-1 l-1-2 xl-1-2">
-        <h2 class="push-0 mega text-left gutter">SIGN-UP HERE</h2>
+        <h2 class="push-0 mega text-left gutter">SIGN-UP</h2>
         <form class="push-0 island" method="POST" action="https://formspree.io/">
           <fieldset class="push-0 pad-t">
             <legend class="hidden">Account type</legend>
